Fix deployment configuration for Next.js 15

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "deploy": "next build && gh-pages -d dist"
+    "deploy": "next build && npx gh-pages -d out"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
